--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,1 +1,20 @@
 <%= render 'form', post: Post.new %>
+
+<%= form_for @post do |f| %>
+    <%= f.label :title %>
+    <%= f.text_field :title %>
+
+    <%= f.label :content %>
+    <%= f.text_area :content %>
+
+    <h4>Select a Category: </h4>
+    <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %>
+
+    <h4> Or create a Category: </h4>
+        <%= f.fields_for :categories, @post.categories.build do |c| %>
+            <%= c.label :name %>
+            <%= c.text_field :name %>
+        <% end %>
+
+    <br><%= f.submit %>
+<% end %>
